PSoC Creator Project/PSoC Creator ProjectMain-20210317T150459Z-001/PSoC Creator ProjectMain/FIGS.cydsn/REBUILD.log
--------------- Rebuild Started: 03/16/2021 21:30:14 Project: main.c, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM0\ARM_GCC_541\Debug\main.o
main.c: In function 'main':
main.c:75:12: warning: unused variable 'Locked_Finger_Cap' [-Wunused-variable]
     uint32 Locked_Finger_Cap[4]={0};
            ^
main.c: In function 'Calibrate_Fingers':
main.c:161:16: warning: unused variable 'y' [-Wunused-variable]
     int i = 0, y = 0;
                ^
main.c: In function 'ButtonStatus':
main.c:573:0: error: unterminated argument list invoking macro "CyPins_ReadPin"
 /* [] END OF FILE */
 ^
main.c:552:20: error: 'CyPins_ReadPin' undeclared (first use in this function)
             return CyPins_ReadPin(Button;          
                    ^
main.c:552:20: note: each undeclared identifier is reported only once for each function it appears in
main.c:552:13: error: expected ';' at end of input
             return CyPins_ReadPin(Button;          
             ^
main.c:552:13: error: expected declaration or statement at end of input
main.c:552:13: error: expected declaration or statement at end of input
main.c:552:13: warning: control reaches end of non-void function [-Wreturn-type]
             return CyPins_ReadPin(Button;          
             ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Rebuild Failed: 03/16/2021 21:30:16 ---------------
